some additional global styling

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Fredoka One", cursive;
+
+  body {
+    background-color: rgb(53, 53, 151);
+  }
 }
 
 li {
@@ -11,4 +18,10 @@ li {
 a {
   text-decoration: none;
   color: initial;
+}
+
+button {
+  background: none;
+  outline: none;
+  border: none;
 }
