basic hompage styling

--- a/src/pages/homepage/Homepage.scss
+++ b/src/pages/homepage/Homepage.scss
@@ -1,7 +1,34 @@
 .Homepage-component {
-  border: 5px solid black;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 50px 0;
+
+  h1 {
+    font-size: 60px;
+
+    color: white;
+
+    .h1-blue {
+      color: #188ff3;
+    }
+
+    .h1-orange {
+      color: #f37a18;
+    }
+
+    .h1-pink {
+      color: #e118f3;
+    }
+
+    .h1-green {
+      color: #18f384;
+    }
+  }
+  p {
+    font-size: 27px;
+    width: 60%;
+    margin: 77px 0;
+  }
 }
