--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,10 @@
 }
 
 body {
-  // background-color: rgb(73, 73, 86);
+  background-image: url(./assets/images/background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+
   background-color: rgb(56, 62, 78);
   border: 6px solid;
   border-image: linear-gradient(
