adjusted question styling

--- a/src/pages/game/question/Question.scss
+++ b/src/pages/game/question/Question.scss
@@ -1,17 +1,33 @@
+@use "../../../scss/variables" as var;
+
 .question {
   display: none;
 
+  h3 {
+    margin-bottom: 10px;
+  }
+
   p {
     font-size: 33px;
+    color: rgb(202, 202, 202);
+    text-align: center;
+    font-family: var.$Inter;
   }
 
   button {
     cursor: pointer;
-    font-size: 33px;
-    margin-right: 10px;
+    font-size: 30px;
+    margin: 0px 10px;
+    color: white;
+    border: 1px solid white;
+    padding: 6px 13px;
+    border-radius: 10px;
+    background-color: rgb(76, 87, 118);
+    font-family: var.$Inter;
 
     &:hover {
-      color: green;
+      color: #f37a18;
+      border: 1px solid #f37a18;
     }
   }
 }
