--- a/src/pages/game/question/Question.scss
+++ b/src/pages/game/question/Question.scss
@@ -26,8 +26,8 @@
     font-family: var.$Inter;
 
     &:hover {
-      color: #f37a18;
-      border: 1px solid #f37a18;
+      color: var.$Orange;
+      border: 1px solid var.$Orange;
     }
   }
 }
