--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap");
 
 $Inter: "Inter", sans-serif;
+
+$Blue: #188ff3;
+$Orange: #f37a18;
+$Pink: #e118f3;
+$Teal: #18f384;
