--- a/src/pages/profile/Profile.scss
+++ b/src/pages/profile/Profile.scss
@@ -1,11 +1,81 @@
-.Profile-component {
-  border: 2px solid black;
+@use "../../scss/variables" as var;
 
-  img {
-    border-radius: 50%;
+.Profile-component {
+  display: flex;
+  padding: 10px 0;
+  justify-content: center;
+
+  div:nth-child(1) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 40px;
+
+    img {
+      border-radius: 50%;
+      height: 200px;
+      width: auto;
+    }
+
+    h2 {
+      font-size: 44px;
+      color: var.$Blue;
+    }
+
+    a {
+      margin: 20px 0;
+      height: max-content;
+      width: max-content;
+    }
+    button {
+      color: white;
+      font-size: 22px;
+      border: 2px solid white;
+      padding: 5px 12px;
+      cursor: pointer;
+    }
   }
 
-  h2 {
-    font-size: 44px;
+  h4 {
+    font-size: 30px;
+    color: var.$Pink;
+    margin-top: 20px;
+  }
+
+  .top-3-games {
+    display: flex;
+    border: 2px solid red;
+    padding: 4px;
+
+    div {
+      text-align: center;
+      margin: 10px 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      h5 {
+        color: var.$Orange;
+        font-size: 20px;
+      }
+
+      span,
+      a {
+        color: white;
+      }
+      a {
+        padding: 2px 6px;
+        width: max-content;
+        margin: 0;
+        background-color: var.$Blue;
+        border-radius: 8px;
+        transition: 0.3s ease;
+        margin: 3px 0;
+
+        &:hover {
+          transform: scale(1.04);
+        }
+      }
+    }
   }
 }
