--- a/src/pages/highScores/HighScores.scss
+++ b/src/pages/highScores/HighScores.scss
@@ -1,7 +1,6 @@
 @use "../../scss/variables" as var;
 
 .Highscores-component {
-  border: 2px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,6 +8,12 @@
   h2 {
     font-size: 44px;
     color: var.$Blue;
+    margin-bottom: 10px;
+
+    @media (max-width: 400px) {
+      font-size: 34px;
+      text-align: center;
+    }
   }
 
   ul {
@@ -19,6 +24,10 @@
       color: white;
       margin: 6px 0;
       cursor: pointer;
+
+      @media (max-width: 350px) {
+        font-size: 23px;
+      }
 
       &:hover {
         color: var.$Pink;
