--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -4,15 +4,34 @@
   align-items: center;
   justify-content: space-between;
 
+  @media (max-width: 500px) {
+    padding: 20px 20px;
+  }
+
   img {
     height: 100px;
     width: 200px;
     cursor: pointer;
+
+    @media (max-width: 750px) {
+      height: 65px;
+      width: 125px;
+    }
+
+    @media (max-width: 450px) {
+      height: 45px;
+      width: 85px;
+    }
   }
 
   ul {
     display: flex;
     justify-content: flex-end;
+
+    @media (max-width: 390px) {
+      flex-direction: column;
+      text-align: center;
+    }
 
     li {
       margin: 0 6px;
@@ -20,6 +39,18 @@
       color: white !important;
       letter-spacing: 0.5px;
       cursor: pointer;
+
+      @media (max-width: 750px) {
+        font-size: 20px;
+      }
+
+      @media (max-width: 390px) {
+        margin: 2px 6px;
+      }
+
+      @media (max-width: 320px) {
+        font-size: 16px;
+      }
     }
 
     a {
