--- a/src/pages/profile/Profile.scss
+++ b/src/pages/profile/Profile.scss
@@ -2,80 +2,108 @@
 
 .Profile-component {
   display: flex;
+  flex-direction: column;
   padding: 10px 0;
   justify-content: center;
 
-  div:nth-child(1) {
+  .user-profile-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-right: 40px;
-
-    img {
-      border-radius: 50%;
-      height: 200px;
-      width: auto;
-    }
 
     h2 {
       font-size: 44px;
       color: var.$Blue;
+
+      @media (max-width: 550px) {
+        font-size: 30px;
+      }
+
+      @media (max-width: 350px) {
+        font-size: 25px;
+      }
     }
 
+    button {
+      color: white;
+      font-size: 20px;
+      border: 2px solid white;
+      padding: 5px 12px;
+      cursor: pointer;
+    }
+
+    .edit-profile {
+      margin: 10px 0;
+    }
+  }
+
+  .top-3-games-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h4 {
+      font-size: 35px;
+      color: var.$Pink;
+      margin-top: 14px;
+
+      @media (max-width: 350px) {
+        font-size: 30px;
+      }
+    }
+
+    .top-3-games {
+      display: flex;
+      margin: 5px 0;
+      flex-direction: column;
+
+      div {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 6px 0;
+
+        h5 {
+          color: var.$Orange;
+          font-size: 21px;
+
+          @media (max-width: 350px) {
+            font-size: 19px;
+          }
+        }
+
+        span,
+        a {
+          color: white;
+          font-size: 19px;
+        }
+        a {
+          padding: 2px 6px;
+          width: max-content;
+          margin: 0;
+          background-color: var.$Blue;
+          border-radius: 2px;
+          transition: 0.3s ease;
+          margin: 3px 0;
+
+          &:hover {
+            transform: scale(1.04);
+          }
+        }
+      }
+    }
     a {
-      margin: 20px 0;
+      margin: 10px 0;
       height: max-content;
       width: max-content;
     }
     button {
       color: white;
-      font-size: 22px;
+      font-size: 20px;
       border: 2px solid white;
       padding: 5px 12px;
       cursor: pointer;
-    }
-  }
-
-  h4 {
-    font-size: 30px;
-    color: var.$Pink;
-    margin-top: 20px;
-  }
-
-  .top-3-games {
-    display: flex;
-    border: 2px solid red;
-    padding: 4px;
-
-    div {
-      text-align: center;
-      margin: 10px 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      h5 {
-        color: var.$Orange;
-        font-size: 20px;
-      }
-
-      span,
-      a {
-        color: white;
-      }
-      a {
-        padding: 2px 6px;
-        width: max-content;
-        margin: 0;
-        background-color: var.$Blue;
-        border-radius: 8px;
-        transition: 0.3s ease;
-        margin: 3px 0;
-
-        &:hover {
-          transform: scale(1.04);
-        }
-      }
     }
   }
 }
