adjusted margins and fonts

--- a/src/pages/profile/Profile.scss
+++ b/src/pages/profile/Profile.scss
@@ -33,7 +33,7 @@
     }
 
     .edit-profile {
-      margin: 10px 0;
+      margin-top: 5px;
     }
   }
 
@@ -43,7 +43,7 @@
     align-items: center;
 
     h4 {
-      font-size: 35px;
+      font-size: 33px;
       color: var.$Pink;
       margin-top: 14px;
 
@@ -66,7 +66,7 @@
 
         h5 {
           color: var.$Orange;
-          font-size: 21px;
+          font-size: 18px;
 
           @media (max-width: 350px) {
             font-size: 19px;
